--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3020,6 +3020,7 @@ button {
   height: 70px;
   padding: 15px 0;
   background-color: #fff;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.1);
 }
 .header-nav li {
   display: inline-block;
@@ -3627,7 +3628,7 @@ button {
   width: 200px;
   margin: 15px auto 0;
 }
-.gray-color {
+.bg-gray {
   background-color: #fafafa;
 }
 .katalog {
@@ -3638,6 +3639,7 @@ button {
   overflow: hidden;
   border-radius: 5px;
   background-color: #fff;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.1);
 }
 .categories-title {
   padding: 30px;
@@ -3691,7 +3693,6 @@ button {
   height: auto;
   padding-left: 20px;
   background-color: #fff;
-  box-shadow: none;
 }
 .item-download__line .item-img__line {
   width: 40%;
@@ -3726,6 +3727,7 @@ button {
   padding-left: 25px;
   border-radius: 5px;
   background-color: #fff;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.1);
 }
 .katalog-select {
   position: relative;
@@ -3737,7 +3739,7 @@ button {
 .katalog-select select {
   width: 100%;
   height: 100%;
-  padding: 0 15px;
+  padding: 0 30px 0 15px;
   border: none;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -3745,6 +3747,8 @@ button {
   color: #54657e;
   background-color: #eceff4;
   border: 1px solid #c9d3df;
+  overflow: auto;
+  text-overflow: ellipsis;
   z-index: 3;
 }
 .katalog-select:after {
@@ -3771,7 +3775,7 @@ button {
   background-color: #eceff4;
 }
 .tabs-item svg {
-  width: 16px;
+  width: 15px;
   height: 16px;
   fill: #8393a7;
 }
@@ -3794,8 +3798,17 @@ button {
   border-left: 1px solid #e5e5e5;
   cursor: pointer;
 }
+.basket svg {
+  width: 30px;
+  height: 30px;
+  fill: #8393a7;
+  transition: all 0.2s ease;
+}
 .basket.active {
   background-color: #eceff4;
+}
+.basket.active svg {
+  fill: #03bd5b;
 }
 .search-button {
   display: inline-block;
@@ -3846,10 +3859,21 @@ button {
 .basket-item {
   padding: 25px 30px;
   border-bottom: 1px solid #c9d3df;
+  overflow: auto;
+  text-overflow: ellipsis;
 }
 .basket-item .basket-item__delete {
   float: right;
   cursor: pointer;
+}
+.basket-item__delete {
+  width: 15px;
+  height: 15px;
+  fill: #c9d3df;
+  transition: all 0.3s ease;
+}
+.basket-item__delete:hover {
+  fill: #f00;
 }
 .basket-result {
   position: relative;
@@ -3878,7 +3902,7 @@ button {
   height: 15px;
 }
 .katalog-products {
-  margin: 20px 0 60px;
+  margin: 30px 0 60px;
 }
 .product-line {
   position: relative;
@@ -3888,6 +3912,7 @@ button {
   margin-bottom: 30px;
   border-radius: 5px;
   background-color: #fff;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.1);
 }
 .product-line:last-child {
   margin-bottom: 0;
@@ -3978,6 +4003,10 @@ button {
   border-radius: 0;
   cursor: pointer;
 }
+.product-counter #up:active,
+.product-counter #down:active {
+  background-color: #fff;
+}
 .product-counter #up {
   border-radius: 0 5px 0 0;
   border-top: none;
@@ -4003,11 +4032,12 @@ button {
   position: relative;
   text-align: center;
   width: 100%;
-  height: 410px;
+  height: auto;
   padding: 20px;
   margin-bottom: 30px;
   border-radius: 5px;
   background-color: #fff;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.1);
 }
 .product-coub .product-img {
   margin-top: 15px;
@@ -4017,10 +4047,9 @@ button {
   max-width: 180px;
 }
 .product-coub .product-title {
-  margin: 0;
-  position: absolute;
-  left: 20px;
-  bottom: 80px;
+  display: block;
+  margin: 60px 0 20px;
+  text-align: left;
 }
 .product-coub .product-title:after {
   content: '';
@@ -4031,13 +4060,21 @@ button {
   background-color: #c9d3df;
 }
 .product-coub .product-active {
+  position: static;
   top: auto;
   right: auto;
   bottom: 20px;
   transform: translateY(0);
 }
+.product-coub .product-counter {
+  float: left;
+}
 .product-coub .product-price {
-  width: 125px;
+  width: auto;
+  float: right;
+  padding: 10px;
+  line-height: normal;
+  margin: 0;
 }
 .footer-top {
   margin-top: 10px;
@@ -4101,6 +4138,22 @@ button {
   .btn-download {
     margin-bottom: 30px;
   }
+  .item-download__line {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    padding-left: 0;
+  }
+  .item-download__line .item-img__line {
+    width: 100%;
+    height: 130px;
+    line-height: 130px;
+  }
+  .item-download__line .item-download__desc-line {
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+  }
 }
 @media screen and (max-width: 1150px) {
   .nav-list {
@@ -4113,6 +4166,9 @@ button {
   }
   .nav-list li:last-child {
     padding-left: 15px;
+  }
+  .product-coub .product-counter {
+    width: 60px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -4147,10 +4203,53 @@ button {
     text-align: center;
     margin-top: 20px;
   }
+  .katalog-select {
+    margin-left: 0;
+  }
+  .search-content__sort {
+    width: 70%;
+  }
+  .product-line {
+    height: auto;
+  }
+  .product-active {
+    position: static;
+    margin-top: 20px;
+    transform: translateY(0);
+  }
 }
 @media screen and (max-width: 920px) {
   .nav-list li:last-child {
     padding-left: 15px;
+  }
+}
+@media screen and (max-width: 860px) {
+  .katalog-sort {
+    height: auto;
+  }
+  .katalog-select {
+    display: block;
+    margin: 12px 0;
+    margin-right: 25px;
+  }
+  .basket {
+    border: none;
+  }
+  .basket-content {
+    top: 150px;
+  }
+  .search-button {
+    padding-right: 15px;
+  }
+  .search-content__sort {
+    position: static;
+    width: 95%;
+  }
+  .product-counter {
+    float: left;
+  }
+  .product-price {
+    float: right;
   }
 }
 @media screen and (max-width: 800px) {
@@ -4173,6 +4272,12 @@ button {
   }
   .circle-item:before {
     width: 80px;
+  }
+  .product-title {
+    margin-top: 10px;
+  }
+  .product-coub .product-title {
+    margin-top: 30px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -4279,6 +4384,26 @@ button {
     margin-top: 5px;
     display: inline-block;
   }
+  .katalog-sort {
+    margin-top: 20px;
+  }
+  .item-download__line .item-img__line {
+    height: 100px;
+    line-height: 100px;
+  }
+  .item-download__line .item-img__line img {
+    max-width: 80px;
+  }
+  .item-download__line .item-download__desc-line {
+    padding: 15px;
+  }
+  .basket-content {
+    width: 90%;
+    top: 170px;
+  }
+  .product-line {
+    text-align: center;
+  }
 }
 @media screen and (max-width: 400px) {
   .item-title__akk {
@@ -4296,5 +4421,10 @@ button {
   }
   .footer-top {
     padding: 20px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .product-line {
+    padding: 15px;
   }
 }
