--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3683,6 +3683,7 @@ button {
   padding: 20px 30px;
   border-left: 2px solid transparent;
   border-top: 1px solid transparent;
+  cursor: pointer;
 }
 .category-title:after {
   content: '';
@@ -4192,6 +4193,9 @@ button {
   }
   .nav-list li {
     margin-right: 13px;
+  }
+  .nav-list .basket {
+    height: 60px;
   }
   .product-coub .product-counter {
     width: 40px;
